🐛 Fixed unreadable Glide banner (#29)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html[class~=dark] body {
+    background: linear-gradient(180deg, transparent 0, #111 300px), fixed 0 0 / 20px 20px radial-gradient(#313131 1px, transparent 0), fixed 10px 10px / 20px 20px radial-gradient(#313131 1px, transparent 0);
+}
+
+body {
+    background: linear-gradient(180deg, hsla(0, 0%, 100%, 0) 0, #fff 300px), fixed 0 0 / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0), fixed 10px 10px / 20px 20px radial-gradient(#d1d1d1 1px, transparent 0);
+}
+
 .hover\:nx-border-primary-500:hover {
     --tw-border-opacity: 1;
     border-color: hsl(var(--nextra-primary-hue) var(--nextra-primary-saturation) 50% / var(--tw-border-opacity));
